# sparkle

./: .gitignore  Cargo.toml  README.md  TODO  config.toml.example
src/: cli.rs  config.rs  content_info.rs  crawl.rs  file_detector.rs  file_metadata.rs  lib.rs  main.rs  metrics.rs  rule.rs  utils.rs
src/handlers/: action.rs
tests/: integration_test.rs
