[package]
name = "sparkle"
version = "0.1.0"
edition = "2024"

[lib]
name = "sparkle"
path = "src/lib.rs"

[dependencies]
file-format = "0.27.0"
clap = { version = "4.5.41", features = ["derive"] }
mime_guess2 = "2.3.1"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }

[dev-dependencies]
tempfile = "3.8"
